<resources>
    <string name="app_name">Travel Malaysia</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="prompt_place_name">Enter Place Name</string>
    <string name="txt_search_icon">Search Icon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Drawer String-->
    <string name="nav_drawer_profile">Profile</string>
    <string name="nav_drawer_map">Map</string>
    <string name="nav_drawer_quests">Quests</string>
    <string name="nav_drawer_rewards">Rewards</string>
    <string name="nav_drawer_help">Help</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="nav_drawer_exit">Exit App</string>

    <!--sharedPerferenceName-->
    <string name="loginPreference">loginPreference</string>

    <!--Txt-->
    <string name="txt_email">Email Address</string>
    <string name="txt_name">Name</string>
    <string name="txt_password">Password</string>
    <string name="txt_points">Points</string>
    <string name="txt_places">Places</string>
    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="submit">Submit</string>
    <string name="txt_email_hint">abc@example.com</string>

    <string name="error_text">This Field is Required</string>

    <!--URL-->
    <string name="my_domain_name">http://kvintech.esy.es/travelmalaysia/</string>
    <string name="url_login_control">http://kvintech.esy.es/travelmalaysia/login_control.php</string>
    <string name="url_register_control">http://kvintech.esy.es/travelmalaysia/register_control.php</string>
    <string name="url_location_control">http://kvintech.esy.es/travelmalaysia/location_control.php</string>
    <string name="url_profile_control">http://kvintech.esy.es/travelmalaysia/profile_control.php</string>
    <string name="url_redeem_control">http://kvintech.esy.es/travelmalaysia/redeem_control.php</string>

    <string name="redeem_history">Redeem History</string>
    <string name="location_history">Location History</string>
    <string name="getting_value">Getting Value from Server...</string>

</resources>
