<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_drawer_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_drawer_menu_profile"
            android:title="@string/nav_drawer_profile" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_drawer_menu_map"
            android:title="@string/nav_drawer_map" />

        <item
            android:id="@+id/nav_quest"
            android:icon="@drawable/ic_drawer_menu_quest"
            android:title="@string/nav_drawer_quests" />

        <item
            android:id="@+id/nav_reward"
            android:icon="@drawable/ic_drawer_menu_reward"
            android:title="@string/nav_drawer_rewards" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_drawer_menu_help"
            android:title="@string/nav_drawer_help" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_drawer_menu_setting"
            android:title="@string/nav_drawer_settings" />
    </group>

    <group
        android:id="@+id/nav_drawer_btm"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logoff"
            android:title="@string/nav_drawer_logout" />
    </group>

</menu>
